Final Venus/Mercury Code
finished coding Venus and Mercury! :D

--- a/src/SolarSystem/SolarSystem.csproj
+++ b/src/SolarSystem/SolarSystem.csproj
@@ -143,6 +143,10 @@
   <ItemGroup>
     <Resource Include="Images\Jupiterbitmap.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\MercuryBitmap.jpg" />
+    <Resource Include="Images\VenusBitmap.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
